# ttrpg_app

./: Cargo.toml  LICENSE  README.md  Thoughts.md
reference-figures/: README.md  initiative-tracker.excalidraw
resources/: dnd_pc_info.json
src/: main.rs
src/apps/: initiative_tracker.rs  mod.rs
